EPMRPP-36975. LaunchFiltersToolbar. Fix filters overlapping

--- a/app/src/pages/inside/common/launchFiltersToolbar/filterList/filterList.scss
+++ b/app/src/pages/inside/common/launchFiltersToolbar/filterList/filterList.scss
@@ -1,7 +1,8 @@
 .filter-list {
   display: flex;
+  flex-wrap: wrap;
 }
 
-.item:not(:first-child) {
-  margin-left: 10px;
+.item {
+  margin: 5px 10px 5px 0;
 }
